# xous-core

./: Cargo.toml
emulation/: xous-release.resc
emulation/ec/: betrusted-ec.repl
emulation/peripherals/: com_ec.cs  com_soc.cs  i2c_lattice_hip.cs
emulation/soc/: betrusted-soc.repl
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  server.rs
loader/: Cargo.toml  build.rs
services/engine-25519/: Cargo.toml
services/engine-25519/src/: main.rs
services/root-keys/: Cargo.toml
services/xous-names/src/: lib.rs
utralib/: Cargo.toml
xous-ipc/src/: buffer.rs
xous-rs/src/: process.rs
xtask/src/: main.rs
