[package]
name = "loader"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
description = "Initial kernel loader for Xous"

[dependencies.com_rs]
git = "https://github.com/betrusted-io/com_rs"
branch = "main"

[dependencies.curve25519-dalek]
version = "3.1.0" # note this is patched to our fork in ./Cargo.toml
default-features = false
features = ["u32_backend", "betrusted"]

[dependencies.ed25519-dalek]
version = "1.0.1"
default-features = false
features = ["u32_backend"]

[dev-dependencies]
lazy_static = "1.4.0"
#rand = "0.7.3"

[features]
debug-print = []
earlyprintk = []
#default = ["debug-print"]
default = []

[target.'cfg(not(any(windows, unix)))'.dependencies]
utralib = { path = "../utralib", default_features = false }
